# epab-project

./: .gitignore  AGENTS.md  README_TESTS.md  db.py  docker-compose.yml  index.html  package.json  pytest.ini  readme.md  requirements-test.txt  requirements.txt  schema.sql  seed_data.sql  test_auth.py
api-server/: .env.example  README.md  README_TESTS.md  conftest.py  database.py  main.py  models.py  pytest.ini  requirements-test.txt  run_tests.py  test_api.py  test_comprehensive.py  test_pytest.py  test_security.py
app/: globals.css  layout.tsx  page.tsx
datapipeline/: Dockerfile  dataloader.py  generate_fake_emails.py  preprocess_clean.py  preprocess_rag.py  pyproject.toml  query_vertex_ai.py  test_embeddings_local.py
prototype-1-power-user/: README.md  package.json  tailwind.config.js
prototype-1-power-user/app/: globals.css  layout.tsx  page.tsx
prototype-1-power-user/src/: App.tsx
prototype-2-conversational-cli/: README.md  soc_cli.py
prototype-3-mobile-simplified/: README.md  index.html
prototype-4-jupyter-interactive/: README.md  investigation_demo.py
prototype1-react/: .gitignore  index.html  package-lock.json  package.json
prototype1-react/src/: App.css  mockData.js
prototype2-cli/: alerts.js  package-lock.json  package.json
prototype3-nextjs/: package-lock.json  package.json
prototype3-nextjs/app/: layout.js  page.js
prototype4-html/: index.html
src/: App.jsx
tests/: conftest.py  test_alerts.py  test_audit_log.py  test_database_connection.py  test_events.py  test_factories.py  test_integration.py  test_preprocess_clean.py
(+29 files in other folders)
