[project]
name = "datapipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "google-cloud-storage>=2.10.0,<3.0.0",
    "google-cloud-aiplatform>=1.38.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "sentence-transformers>=2.0.0",
    "torch>=2.0.0",
]
